Add example ssh-key

--- a/preseed/os-infra.cfg
+++ b/preseed/os-infra.cfg
@@ -5,6 +5,18 @@ d-i passwd/username string myuser
 ### user-password-crypted generated with:
 ###   mkpasswd -R 1000000 -m sha-512 -S $(pwgen -ns 16 1) $PASSWORD
 d-i passwd/user-password-crypted password $6$rounds=1000000$yD5v7iN53tVbL7yG$ZngH7/I5RVJuSQp1vy2SydGO.QEXAMPLE
+
+d-i preseed/late_command string in-target echo;                     \
+        in-target mkdir --mode=700 /home/myuser/.ssh; \
+        in-target chown myuser:myuser /home/myuser/.ssh; \
+        in-target touch /home/myuser/.ssh/authorized_keys; \
+        in-target /bin/sh -c "echo 'ssh-rsa AAAAB3NzaC1yc2EAAAABJQ...<snip> rsa-key-20180430' > /home/myuser/.ssh/authorized_keys"; \
+        in-target chown myuser:myuser /home/myuser/.ssh/authorized_keys; \
+        in-target wget -P /root/ 10.42.0.2/pub/Ubuntu/setup-ips.sh; \
+        in-target wget -P /root/ 10.42.0.2/pub/Ubuntu/setup-vip.sh; \
+        in-target wget -P /etc/rsyslog.d/ 10.42.0.2/pub/Ubuntu/10-remote.conf;
+
+
 tasksel tasksel/first multiselect none
 d-i pkgsel/include string openssh-server tmux ladvd bridge-utils debootstrap ifenslave ifenslave-2.6 lsof lvm2 ntp ntpdate sudo tcpdump vlan pacemaker crmsh corosync cluster-glue resource-agents libqb0 wget 
 
