--- a/preseed/os-infra.cfg
+++ b/preseed/os-infra.cfg
@@ -72,6 +72,12 @@ d-i partman-auto-lvm/guided_size string max
 #  80G "system" volume group
 #  200G "lxc" volume group
 #  remainder "cinder-volumes" volume group
+##############################################################
+## NOTE:  For an AIO build, you'll either need:
+# export BOOTSTRAP_OPTS="bootstrap_host_data_disk_device=sdb"
+#     -or-
+# adjust the "system" pv/vg and / filesystem to be 50+ GB
+##############################################################
 d-i partman-auto/expert_recipe string    \
   openstack ::                           \
     512 512 512 ext2                     \
