--- a/preseed/os-infra.cfg
+++ b/preseed/os-infra.cfg
@@ -18,7 +18,7 @@ d-i preseed/late_command string in-target echo;                     \
 
 
 tasksel tasksel/first multiselect none
-d-i pkgsel/include string openssh-server tmux ladvd bridge-utils debootstrap ifenslave ifenslave-2.6 lsof lvm2 ntp ntpdate sudo tcpdump vlan pacemaker crmsh corosync cluster-glue resource-agents libqb0 wget 
+d-i pkgsel/include string openssh-server tmux git ladvd bridge-utils debootstrap ifenslave ifenslave-2.6 lsof lvm2 ntp ntpdate sudo tcpdump vlan pacemaker crmsh corosync cluster-glue resource-agents libqb0 wget 
 
 # other odds and ends
 d-i debian-installer/locale string en_US.UTF-8
